src/objects/c2g__codaItem__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>c2g__Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data</label>
        <referenceTo>c2g__codaDataProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <referenceTo>c2g__codaFormatData__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ITName__c</fullName>
        <label>ITName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Image__c</fullName>
        <label>Image</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ItemSequence__c</fullName>
        <label>ItemSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ItemType__c</fullName>
        <label>ItemType</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_item_type_section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_line_horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_line_vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_agregate_table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_item_type_pagenum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PageNum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageNum</label>
        <referenceTo>c2g__codaPageNumProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>c2g__codaSection__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Table</label>
        <referenceTo>c2g__codaTableProperty__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Text__c</fullName>
        <label>Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UseFormat__c</fullName>
        <label>UseFormat</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_inherit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleBetween__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleBetween</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleFirst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleFirst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleLast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleLast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__VisibleOnePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisibleOnePage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__X__c</fullName>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Y__c</fullName>
        <label>Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>